--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "overtrue/laravel-query-logger",
+    "name": "liyu/laravel-query-logger",
     "description": "A dev tool to log all queries for laravel application.",
     "type": "library",
     "require": {
@@ -7,19 +7,19 @@
     },
     "autoload": {
         "psr-4": {
-            "Overtrue\\LaravelQueryLogger\\": "src"
+            "Liyu\\LaravelQueryLogger\\": "src"
         }
     },
     "license": "MIT",
     "authors": [
         {
-            "name": "overtrue",
-            "email": "anzhengchao@gmail.com"
+            "name": "liyu",
+            "email": "liyu001989@gmail.com"
         }
     ],
     "extra": {
         "laravel": {
-            "providers": ["Overtrue\\LaravelQueryLogger\\ServiceProvider"]
+            "providers": ["Liyu\\LaravelQueryLogger\\ServiceProvider"]
         }
     }
 }
